--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,158 @@
-#root {
+:root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  font-weight: 500;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.rainbow {
+  background: var(--rainbowGradient);
+  background-size: 1000% 1000%;
+  animation: rainbow 45s ease-in-out infinite;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes rainbow {
+  0% {
+    background-position: 0% 82%;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    background-position: 100% 19%;
+  }
+  100% {
+    background-position: 0% 82%;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.GenreBrowserContainer {
 }
 
-.card {
-  padding: 2em;
+.PlaybackBar {
+  display: none;
+  height: 80px;
+  background: #eaeeee;
+  width: 100vw;
+  border-top: 1px solid #a7c4be;
 }
 
-.read-the-docs {
-  color: #888;
+.IDK {
+  max-height: 80vh !important;
+  height: 80vh !important;
+  overflow-y: scroll !important;
+}
+
+.GenreBrowser.GenreBrowser {
+  max-height: 80vh !important;
+  height: 80vh !important;
+  overflow-y: scroll !important;
+  border-radius: 4px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.GenreBadge {
+  font-size: 16px;
+  background: rgba(240, 255, 255, 0.7);
+}
+
+.GenreBadge:hover {
+  font-weight: 700;
+  background: rgba(247, 255, 255, 0.8);
+}
+
+.GenreBadge.isActive {
+  font-weight: 900;
+  background: rgb(247, 249, 249);
+}
+
+.GenreInput {
+}
+
+.GenresList {
+}
+
+.IDK {
+  background: #ffffff22;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Sometype Mono";
+}
+
+body {
+  overscroll-behavior: none;
+}
+
+:root {
+  --mediumRainbowGradient: linear-gradient(
+    124deg,
+    #7ce3fffe,
+    #7ce3fffe,
+    #bdee63,
+    #ffe629,
+    #ffc53d,
+    #f76b15,
+    #46a758,
+    #30a46c,
+    #29a383,
+    #12a594,
+    #00a2c7,
+    #0090ff,
+    #3e63dd,
+    #5b5bd6,
+    #6e56cf,
+    #8e4ec6,
+    #d6409f,
+    #e54d2e,
+    #ec5d5e,
+    #ec5a72,
+    #ee518a,
+    #de51a8,
+    #b658c4,
+    #9a5cd0,
+    #7d66d9,
+    #6e6ade,
+    #5472e4,
+    #3b9eff,
+    #23afd0
+  );
+
+  --rainbowGradient: linear-gradient(
+      to bottom,
+      rgba(11, 12, 11, 0.682),
+      rgba(38, 37, 37, 0.662)
+    ),
+    linear-gradient(
+      124deg,
+      #0a1518f0,
+      #0d1c22f0,
+      #131808f0,
+      #1a180cf0,
+      #140f08f0,
+      #170a02f0,
+      #070f08f0,
+      #050f0af0,
+      #030d0bf0,
+      #010908f0,
+      #000b0ef0,
+      #000910f0,
+      #040d26f0,
+      #15154bf0,
+      #100c28f0,
+      #170d26f0,
+      #1d0817f0,
+      #2c0d09f0,
+      #2c0c0df0,
+      #42141cf0,
+      #431224f0,
+      #3e122ff0,
+      #190c21f0,
+      #1d1130f0,
+      #130f2cf0,
+      #1d1c4df0,
+      #0e122bf0,
+      #041328f0,
+      #0d2534f0
+    );
 }
